poke/testsuite/poke.pkl/struct-method-diag-13.pk
/* { dg-do compile } */

deftype Foo =
  struct
  {
    method foo = void: {}

    deftype Bar =
      struct
      {
        method bar = void:
        {
          foo; /* { dg-error "method.*not in this struct" } */
        }
      };
  };
